// Vitest Snapshot v1

exports[`<AuthApiExampleTemplate /> > should render a failure message if unauthenticated 1`] = `
<DocumentFragment>
  <div>
    <nav>
      <ul>
        <li>
          <a
            href="/"
          >
            🏠 Home
          </a>
        </li>
        <li>
          <a
            href="/posts"
          >
            📰 Posts
          </a>
        </li>
        <li>
          <a
            href="/pages"
          >
            📑 Pages
          </a>
        </li>
        <li>
          <a
            href="/examples"
          >
            ⚛️ Examples
          </a>
        </li>
      </ul>
    </nav>
    <main>
      <div>
        <h1>
          API Authorization Example
        </h1>
        <a
          href="/"
        >
          <span>
            Home →
          </span>
        </a>
        <div>
          <p>
            Gatsby was unable to make an authorized request to the WordPress API. Please check your .env.development.local file to ensure that your 
            <code>
              WP_APPLICATION_USERNAME
            </code>
             and 
            <code>
              WP_APPLICATION_PASSWORD
            </code>
             are set correctly.
          </p>
          <p>
            For more information on how to set these values, please see 
            <a
              href="https://decoupledkit.pantheon.io/docs/frontend-starters/gatsby/gatsby-wordpress/setting-environment-variables"
            >
              Setting Environment Variables
            </a>
          </p>
        </div>
      </div>
    </main>
    <footer>
      <nav>
        <ul />
      </nav>
      <div>
        <span>
          © 2023 Built with 
          <a
            href="https://www.gatsbyjs.com"
          >
            Gatsby
          </a>
           and 
          <a
            href="https://wordpress.org/"
          >
            WordPress
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`<AuthApiExampleTemplate /> > should render a success message if authenticated 1`] = `
<DocumentFragment>
  <div>
    <nav>
      <ul>
        <li>
          <a
            href="/"
          >
            🏠 Home
          </a>
        </li>
        <li>
          <a
            href="/posts"
          >
            📰 Posts
          </a>
        </li>
        <li>
          <a
            href="/pages"
          >
            📑 Pages
          </a>
        </li>
        <li>
          <a
            href="/examples"
          >
            ⚛️ Examples
          </a>
        </li>
      </ul>
    </nav>
    <main>
      <div>
        <h1>
          API Authorization Example
        </h1>
        <a
          href="/"
        >
          <span>
            Home →
          </span>
        </a>
        <div>
          <p>
            🎉 Gatsby was able to successfully make an authenticated request to WordPress! 🎉
          </p>
        </div>
      </div>
    </main>
    <footer>
      <nav>
        <ul />
      </nav>
      <div>
        <span>
          © 2023 Built with 
          <a
            href="https://www.gatsbyjs.com"
          >
            Gatsby
          </a>
           and 
          <a
            href="https://wordpress.org/"
          >
            WordPress
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
